--- a/django_getting_started/meeting_planner/meetings/templates/meetings/detail.html
+++ b/django_getting_started/meeting_planner/meetings/templates/meetings/detail.html
@@ -10,4 +10,7 @@
             This meeting has been scheduled on <strong>{{meeting.date}}</strong>, at <strong>{{meeting.start_time}}</strong> in <strong>{{meeting.room}}</strong>
         </p>
     </body>
+    <footer>
+        <h4><a href="{% url 'home' %}">HOME</a></h4>
+    </footer>
 </html>
