Room list project

--- a/django_getting_started/meeting_planner/website/templates/website/welcome.html
+++ b/django_getting_started/meeting_planner/website/templates/website/welcome.html
@@ -20,4 +20,7 @@
             {% endfor %}
         </ul>
     </body>
+    <footer>
+        <h4><a href="{% url 'rooms' %}">Available Rooms</a></h4>
+    </footer>
 </html>
