--- a/django_getting_started/meeting_planner/meetings/templates/meetings/room_detail.html
+++ b/django_getting_started/meeting_planner/meetings/templates/meetings/room_detail.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Rooms Available</title>
-    </head>
-    <body>
+{% extends "base.html" %}
+
+{% block title %}Rooms Available{% endblock %}
+
+{% block content %}
         <h1>Rooms Available</h1>
         <p>
             <ul>
@@ -17,8 +15,6 @@
                 {% endfor %}
             </ul>
         </p>
-    </body>
-    <footer>
         <h4><a href="{% url 'home' %}">HOME</a></h4>
-    </footer>
-</html>
+
+{% endblock %}
