--- a/django_getting_started/meeting_planner/website/templates/website/welcome.html
+++ b/django_getting_started/meeting_planner/website/templates/website/welcome.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Welcome</title>
-    </head>
-    <body>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+        
         <h1>Welcome to the Meeting Planner</h1>
         <p>
             This is a beginner demo project for learning <em>Django</em>.
@@ -19,8 +18,7 @@
                 </li>
             {% endfor %}
         </ul>
-    </body>
-    <footer>
+
         <h4><a href="{% url 'rooms' %}">Available Rooms</a></h4>
-    </footer>
-</html>
+
+{% endblock %}
