--- a/django_getting_started/meeting_planner/website/static/website/style.css
+++ b/django_getting_started/meeting_planner/website/static/website/style.css
@@ -1,5 +1,8 @@
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
-    font-family: sans-serif;
     color: lightslategray;
     background-color: whitesmoke;
 }
@@ -9,4 +12,56 @@ img {
     width: 10%;
     float: right;
     margin-right: 2%;
-  }
+}
+
+form {
+    padding-top: 20%;
+    margin: auto 2rem;
+    background-color: gainsboro;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: lightblue 0px 6px;
+    text-align: left!important;
+}
+
+input{
+    border-radius: 0.25rem;
+    border: 1px solid #ced4da;
+    line-height: 1.5;
+    color: #495057;
+    width: 70%; 
+    /* margin-top: 7px 10px 5px auto; */
+    padding: 7px;
+    font-size: 1rem;
+    /* display: block; */
+}
+
+#submitBtn {
+    /* display: inline-block; */
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin-top: 1rem;
+    color: rgb(255, 255, 255);
+    width: 100%;
+    background-color: lightslategray;
+    font-weight: 500;
+    box-shadow: rgb(60, 69, 78) 0px 4px;
+    border-color: lightslategray;
+    border-radius: calc(0.5em - 1px);
+}
+
+#submitBtn:hover {
+    background-color: lightblue;
+    border-color: lightblue;
+    cursor: pointer;
+}
